--- a/src/App.css
+++ b/src/App.css
@@ -390,9 +390,14 @@ input, select {
 }
 #dashboard-user nav {
   height: 10vh;
+  min-height: 50px;
   background-color: white;
   border-radius: 0;
   box-shadow: rgba(240, 240, 240, 0.35) 0px 5px 15px;
+}
+#dashboard-user nav img {
+  position: absolute;
+  top: -5%;
 }
 #dashboard-user .navbar {
   height: fit-content;
@@ -401,11 +406,6 @@ input, select {
 #dashboard-user .navbar p {
   padding: 0;
   color: black;
-}
-
-.logo {
-  position: absolute;
-  top: -8%;
 }
 
 .background {
@@ -437,7 +437,6 @@ input, select {
   align-content: space-between;
   height: 90%;
   width: 75%;
-  overflow-y: scroll;
   margin-left: 20px;
 }
 
@@ -448,6 +447,8 @@ input, select {
   padding: 20px;
   background-color: #D9B68B;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 .summary h2, .summary p, .summary h3 {
   margin-bottom: 25px;
@@ -474,6 +475,11 @@ input, select {
   height: 350px;
   margin: auto;
   border: none;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.summary::-webkit-scrollbar {
+  display: none;
 }
 
 .welcome {
