--- a/src/sass/_dashboard.scss
+++ b/src/sass/_dashboard.scss
@@ -1,20 +1,24 @@
 #dashboard-user{
-
+ position: fixed;
  height: 100vh;
  width: 100vw;
  min-width: 700px;
  background-color: transparent;
  
  nav{
+     position:absolute;
+     top:0%;
+     width: calc(100% - 250px);
+     left:250px;
+     z-index: 1;
      height: 10vh;
      min-height: 50px;
-     background-color: $secondary_color;
+     background-color: rgb(0,0,0,50%);
      border-radius: 0;
-    box-shadow: rgba(240, 240, 240, 0.35) 0px 5px 15px;
-
+     filter: grayscale(10%);
+    
     img{
-        position: absolute;
-        top: -5%;
+        display: none;
     }
  }
 
@@ -24,7 +28,8 @@
      
      p{
          padding: 0;
-         color: black;
+         font-weight: bold;
+         color: $secondary_color;
         }
     }
     
@@ -34,7 +39,8 @@
 
 .background{
     position: absolute;
-    height: inherit;
+    height: 100%;
+    width: 100%;
     width: inherit;
     z-index: -1;
     background-image:
@@ -49,14 +55,13 @@
 .dash-body{
     position: absolute;
     display:flex;
-    top: 10%;
-    //border-top: 1px solid $color_4;
-    height: 90%;
+    height: 100vh;
+    width: 100vw;
     z-index: 0;
     min-height: 500px;
+    border-radius: 0;
     min-width: 100%;
     align-items: center;
-    //background-color: $primary_color;
     border-radius: 0;
 }
 
@@ -65,15 +70,17 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-content: space-between;
-    height: 90%;
+    align-content: flex-end;
+    align-self:flex-end;
+    height: 100%;
     width: 75%;
     margin-left: 20px;
 }
 
+
 .summary{
     overflow-y: scroll;
-    height: 95%;
+    height: 90%;
     width: 500px;
     padding: 20px;
     background-color: $color_5;
@@ -127,7 +134,8 @@
 .welcome{
     background-image: url('https://images.unsplash.com/photo-1546410531-bb4caa6b424d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=871&q=80');
     background-size: cover;
-    width: 70%;
+    width: 85%;
+    margin-left: 0;
 }
 
 
@@ -155,8 +163,9 @@
 
 .utility{
     display: flex;
+    align-self: flex-end;
     flex-direction: column;
-    height: 95%;
+    height: 85%;
     width: 500px;
 
     &>div{
