--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -29,11 +29,13 @@
 
 
 .module-bar {
-    height: 90%;
+    height: 100%;
     width: 15%;
-    z-index: 1;
+    z-index: 2;
+    align-self: flex-end;
     min-width: 250px;
     background-color: #D7B288;
+    border-radius: 0 5px 5px 0;
     background-image:
         linear-gradient(to top, rgb(200, 200, 200) 1%, white 8%, white 80%, transparent 80%),
         linear-gradient(to right, transparent 90%, $color_1 90%),
