--- a/src/sass/_dashboard.scss
+++ b/src/sass/_dashboard.scss
@@ -17,9 +17,6 @@
      border-radius: 0;
      filter: grayscale(10%);
     
-    img{
-        display: none;
-    }
  }
 
  .navbar{
@@ -69,7 +66,6 @@
 
 .module-body,.welcome{
     display: flex;
-    flex-wrap: wrap;
     justify-content: space-around;
     align-content: flex-end;
     align-self:flex-end;
@@ -87,6 +83,7 @@
     background-color: $color_5;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset,
     rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
+    align-self: flex-end;
     -ms-overflow-style: none;
     scrollbar-width: none;
     
@@ -235,6 +232,9 @@
             padding: 5px;
             border: 2px outset grey;
         }
+        button{
+            margin-right: 5px;
+        }
 
         span{
             margin-left: 20px;
@@ -249,3 +249,5 @@
 
    
 }
+
+
