--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -43,9 +43,8 @@ button:hover {
 }
 
 .loading{
-    position: fixed ;
-    top: 30vh;
-    left: 45%;
+    position: absolute ;
+    margin: auto;
     background-color: transparent;
 }
 
