fixed spinner background transparency

--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -44,7 +44,8 @@ button:hover {
 
 .loading{
     position: absolute ;
-    margin: auto;
+    left: 50%;
+    top: 50%;
     background-color: transparent;
 }
 
